--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,5 +27,12 @@
             <version>${hibernate-validator.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
     </dependencies>
+
 </project>
