--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <hikari.version>2.6.1</hikari.version>
         <hibernate-core.version>5.2.10.Final</hibernate-core.version>
         <hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
-        <hibernate-jpa-api.version>1.0.0.Final</hibernate-jpa-api.version>
+        <querydsl.version>4.1.4</querydsl.version>
         <!-- tests -->
         <junit.version>4.12</junit.version>
         <mockito.version>2.7.22</mockito.version>
@@ -58,6 +58,8 @@
         <maven-checkstyle.version>2.17</maven-checkstyle.version>
         <!-- api -->
         <jackson.version>2.7.0</jackson.version>
+        <!-- apache derby -->
+        <derby.version>10.11.1.1</derby.version>
     </properties>
 
     <dependencies>
